@@ -1,8 +1,15 @@
+Mon Jun 21 17:38:35 UTC 2010  Jeff Parsons  <j.parsons@vanderbilt.edu>
+
+        * tao/Vector_CDR_T.h:
+
+          Added 2 more 'typename' qualifiers that finally made gcc happy
+          in compiling the Alt_Mapping test.
+
 Mon Jun 21 17:01:16 UTC 2010  Jeff Parsons  <j.parsons@vanderbilt.edu>
 
         * tao/Vector_CDR_T.h:
 
-          More mintor template syntax changes to make gcc happy.
+          More minor template syntax changes to make gcc happy.
 
 Mon Jun 21 15:20:26 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
